# custom-image-dataset-classification

./: .gitignore  Cargo.toml  README.md
model/: model.mpk
src/: dataset.rs  inference.rs  lib.rs  main.rs  training.rs
