[package]
name = "burn-image-training"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn.git" , features = ["wgpu", "train", "vision", "network"] }
flate2 = "1.0.28"
tar = "0.4.40"
